--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: always
     environment:
       PORT: 5000
-      MONGO_URI: mongodb://default_root:default_password@jwt_mongo:27017/jwt?authSource=admin
+      MONGO_URI: mongodb://${JWT_MONGO_ROOT}:${JWT_MONGO_PASSWORD}@jwt_mongo:27017/jwt?authSource=admin
     volumes:
       - ./server:/app
       
@@ -27,8 +27,8 @@ services:
     ports:
       - 27017:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: default_root
-      MONGO_INITDB_ROOT_PASSWORD: default_password
+      MONGO_INITDB_ROOT_USERNAME: "${JWT_MONGO_ROOT}"
+      MONGO_INITDB_ROOT_PASSWORD: ${JWT_MONGO_PASSWORD}
 
 
 volumes:
